added charts to user trading history
